feat: Add card component

--- a/src/shared/components/Card/styles.module.css
+++ b/src/shared/components/Card/styles.module.css
@@ -1,6 +1,6 @@
 .card {
-  width: 17rem;
-  height: 19.375rem;
+  width: auto;
+  height: 19.25rem;
   color: #222d39;
   text-align: center;
   background-color: #fff;
