--- a/src/global.css
+++ b/src/global.css
@@ -11,5 +11,9 @@
   font-style: normal;
 }
 body {
-  background-color: #222d39;
+  background-color: #fff;
+}
+
+button {
+  background-color: transparent;
 }
